--- a/DjvuApp.WindowsPhone/strings/ru/Resources.resw
+++ b/DjvuApp.WindowsPhone/strings/ru/Resources.resw
@@ -133,7 +133,7 @@
     <value>оценить приложение</value>
   </data>
   <data name="AboutPage_AboutSection_RateComment" xml:space="preserve">
-    <value>Оставьте отзыв о приложении, если вы еще этого не сделали. Это нетрудно, зато ваши положительные отзывы мотивируют разработчиков на улучшение приложения и добавление новых фич!</value>
+    <value>Оставьте отзыв о приложении, если вы еще этого не сделали. Это не займет у вас много времени, однако ваши положительные отзывы мотивируют разработчиков на улучшение приложения и добавление новых фич!</value>
   </data>
   <data name="AboutPage_AboutSection_Version.Text" xml:space="preserve">
     <value>Версия 1.0
@@ -255,6 +255,18 @@ By Useless guy</value>
   </data>
   <data name="OutlineDialog_Title" xml:space="preserve">
     <value>Оглавление</value>
+  </data>
+  <data name="RateAppDialog_CancelButton_Caption" xml:space="preserve">
+    <value>cancel</value>
+  </data>
+  <data name="RateAppDialog_Content" xml:space="preserve">
+    <value>Оставьте отзыв о приложении, если вы еще этого не сделали. Это не займет у вас много времени, однако ваши положительные отзывы мотивируют разработчиков на улучшение приложения и добавление новых фич!</value>
+  </data>
+  <data name="RateAppDialog_RateButton_Caption" xml:space="preserve">
+    <value>rate</value>
+  </data>
+  <data name="RateAppDialog_Title" xml:space="preserve">
+    <value>ОЦЕНИТЬ ПРИЛОЖЕНИЕ</value>
   </data>
   <data name="RemoveBookDialog_CancelButton_Caption" xml:space="preserve">
     <value>отмена</value>
