--- a/DjvuApp.Universal/strings/en/Resources.resw
+++ b/DjvuApp.Universal/strings/en/Resources.resw
@@ -198,6 +198,9 @@
   <data name="MainPage_Title.Text" xml:space="preserve">
     <value>My library</value>
   </data>
+  <data name="OutlineDialog.SecondaryButtonText" xml:space="preserve">
+    <value>Back</value>
+  </data>
   <data name="OutlineDialog_Title" xml:space="preserve">
     <value>Outline</value>
   </data>
@@ -236,6 +239,9 @@
   </data>
   <data name="RenameDialog_NewNameField.Header" xml:space="preserve">
     <value>Name</value>
+  </data>
+  <data name="SelectBookmarkDialog.SecondaryButtonText" xml:space="preserve">
+    <value>Back</value>
   </data>
   <data name="SelectBookmarkDialog.Title" xml:space="preserve">
     <value>Bookmarks</value>
