--- a/DjvuApp.Universal/strings/ru/Resources.resw
+++ b/DjvuApp.Universal/strings/ru/Resources.resw
@@ -198,6 +198,9 @@
   <data name="MainPage_Title.Text" xml:space="preserve">
     <value>Мои книги</value>
   </data>
+  <data name="OutlineDialog.SecondaryButtonText" xml:space="preserve">
+    <value>Назад</value>
+  </data>
   <data name="OutlineDialog_Title" xml:space="preserve">
     <value>Оглавление</value>
   </data>
@@ -236,6 +239,9 @@
   </data>
   <data name="RenameDialog_NewNameField.Header" xml:space="preserve">
     <value>Новое имя файла</value>
+  </data>
+  <data name="SelectBookmarkDialog.SecondaryButtonText" xml:space="preserve">
+    <value>Назад</value>
   </data>
   <data name="SelectBookmarkDialog.Title" xml:space="preserve">
     <value>Закладка</value>
