Fixed localization issues. The navigation backstack now gets cleared every time you launch the application.

--- a/DjvuApp.Universal/strings/ru/Resources.resw
+++ b/DjvuApp.Universal/strings/ru/Resources.resw
@@ -208,7 +208,7 @@
     <value>Отмена</value>
   </data>
   <data name="RateAppDialog_Content" xml:space="preserve">
-    <value>Поставьте 5 звезд, если вы этого ещё не сделали. Это не займет у вас много времени, однако ваши положительные отзывы мотивируют разработчиков на улучшение приложения и добавление новых фич! Если вам что-то не устраивает, пожалуйста, свяжитесь с разработчиком, прежде чем писать плохие отзывы. Спасибо!</value>
+    <value>Поставьте 5 звезд, если вы этого ещё не сделали. Это не займет у вас много времени, однако ваши положительные оценки мотивируют разработчиков на улучшение приложения и добавление новых фич! Если вас что-то не устраивает, пожалуйста, свяжитесь с разработчиком, прежде чем поставить плохую оценку. Спасибо!</value>
   </data>
   <data name="RateAppDialog_RateButton_Caption" xml:space="preserve">
     <value>Оценить</value>
