Finished the implementation of text search function. Added the missing localization text for the view library button. Fixed the memory leaks in GetOutlineAsync() and GetTextLayerAsync().

--- a/DjvuApp.Universal/strings/en/Resources.resw
+++ b/DjvuApp.Universal/strings/en/Resources.resw
@@ -276,10 +276,19 @@
   <data name="ViewerPage_RemoveBookmarkAppBarButton.Label" xml:space="preserve">
     <value>Remove bookmark</value>
   </data>
+  <data name="ViewerPage_SearchAppBarButton.Label" xml:space="preserve">
+    <value>Find</value>
+  </data>
+  <data name="ViewerPage_SearchBox.PlaceholderText" xml:space="preserve">
+    <value>Search</value>
+  </data>
   <data name="ViewerPage_ShareAppBarButton.Label" xml:space="preserve">
     <value>Share</value>
   </data>
   <data name="ViewerPage_ShowBookmarksAppBarButton.Label" xml:space="preserve">
     <value>Bookmarks</value>
+  </data>
+  <data name="ViewerPage_ViewLibraryAppBarButton.Label" xml:space="preserve">
+    <value>View library</value>
   </data>
 </root>
