--- a/DjvuApp.Universal/strings/ru/Resources.resw
+++ b/DjvuApp.Universal/strings/ru/Resources.resw
@@ -276,10 +276,19 @@
   <data name="ViewerPage_RemoveBookmarkAppBarButton.Label" xml:space="preserve">
     <value>Удалить закладку</value>
   </data>
+  <data name="ViewerPage_SearchAppBarButton.Label" xml:space="preserve">
+    <value>Искать</value>
+  </data>
+  <data name="ViewerPage_SearchBox.PlaceholderText" xml:space="preserve">
+    <value>Поиск</value>
+  </data>
   <data name="ViewerPage_ShareAppBarButton.Label" xml:space="preserve">
     <value>Поделиться</value>
   </data>
   <data name="ViewerPage_ShowBookmarksAppBarButton.Label" xml:space="preserve">
     <value>Закладки</value>
+  </data>
+  <data name="ViewerPage_ViewLibraryAppBarButton.Label" xml:space="preserve">
+    <value>Вернуться в библиотеку</value>
   </data>
 </root>
