--- a/src/DjvuApp.Universal/strings/en/Resources.resw
+++ b/src/DjvuApp.Universal/strings/en/Resources.resw
@@ -135,8 +135,8 @@
   <data name="AboutPage_AboutSection_RateComment.Text" xml:space="preserve">
     <value>If you have not already done so, please consider rating and reviewing this application.</value>
   </data>
-  <data name="Application_MigrationProgress" xml:space="preserve">
-    <value>Creating thumbnails: {0} of {1}</value>
+  <data name="Application_MigrationMessage" xml:space="preserve">
+    <value>Updating the database...</value>
   </data>
   <data name="Application_Opening" xml:space="preserve">
     <value>Opening: {0}</value>
